--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -104,6 +104,7 @@ input.error {
 nav {
   display: flex;
   align-items: center;
+  
 }
 nav a {
   margin-left: 10px;
@@ -118,6 +119,10 @@ nav button {
   cursor: pointer;
   font-size: 1em;
 }
+nav button:hover{
+  background: #1aac83;
+  color: #fff;
+}
 /* auth forms */
 form.signup, form.login {
   max-width: 400px;
@@ -125,4 +130,5 @@ form.signup, form.login {
   padding: 20px;
   background: #fff;
   border-radius: 4px;
+  
 }
